--- a/pipe2jpeg.html
+++ b/pipe2jpeg.html
@@ -96,6 +96,12 @@
           },
         ],
       });
+
+      $('<button type="button" class="red-ui-button red-ui-button-small"><i class="fa fa-book"></i> help</button>')
+        .on('click', () => {
+          RED.sidebar.help.show(this.type);
+        })
+        .appendTo($('div.red-ui-tray-footer'));
     },
     oneditsave: function () {
       const basePath = $('#node-input-basePath');
