update help text

--- a/locales/en-US/pipe2jpeg.html
+++ b/locales/en-US/pipe2jpeg.html
@@ -67,7 +67,7 @@
 {
   topic: '/pipe2jpeg/office_sub/buffer/array',
   retain: false,
-  payload: [buffer[65536], buffer[24686]]
+  payload: [[buffer[65536], buffer[24686]]
   totalSize: 90222
 }
               </code></pre>
